<resources>
    <string name="app_name" translatable="false">STC: Swiss Draft Calculator</string>
    <string name="app_history">Tournament History</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_add_player">Add Player</string>
    <string name="hint_player_name">Player name</string>
    <string name="add_item">Add</string>
    <string name="hint_rounds">Rounds</string>
    <string name="start_game">Start</string>
    <string name="add_players_from_history">Add players from history</string>
    <string name="no_players_from_history">No players in history</string>
    <string name="text_end_round">End</string>
    <string name="warning_empty_field">Field cannot be empty</string>
    <string name="warning_need_players">Please add players</string>
    <string name="text_vs">vs</string>
    <string name="text_0" translatable="false">0</string>
    <string name="text_1" translatable="false">1</string>
    <string name="text_2" translatable="false">2</string>
    <string name="text_from">from</string>
    <string name="text_round">Round :</string>
    <string name="text_after_game">Results after round :</string>
    <string name="text_winner">Winner:</string>
    <string name="text_display_counter">Display round time:</string>
    <string name="text_time_round">Time per round[m]: %1$s</string>
    <string name="text_vibration">Turn vibration:</string>
    <string name="text_vibration_detail">Allows the vibration to inform about the ending time of round</string>
    <string name="text_use_counter_detail">Allows countdown time for round</string>
    <string name="text_first_vibration">First vibration[m]: %1$s</string>
    <string name="text_second_vibration">Second vibration[m]: %1$s</string>
    <string name="text_duration_vibration">Duration[s]: %1$s</string>
    <string name="dialog_start_title">Game start</string>
    <string name="dialog_start_message">To start parings press button\nNumber of players: %1$d\nNumber of rounds: %2$d</string>
    <string name="dialog_start_message_warning_replays">To start parings press button\nNumber of players: %1$d\nNumber of rounds: %2$d\nWith this setting player can be paired more than once to change it go to settings!</string>
    <string name="dialog_start_button">Close</string>
    <string name="dialog_end_title">Game ended</string>
    <string name="dialog_end_message">Click \'close\' to close application</string>
    <string name="dialog_error_algorithm_title">Algorithm error</string>
    <string name="dialog_error_algorithm__message">Cannot pair players.\nPlease reset an app.</string>
    <string name="dialog_warning_title">Warning</string>
    <string name="dialog_warning_message">Too many rounds or too less players.\nPlease add players or decrement number of rounds.</string>
    <string name="dialog_info_title">Info</string>
    <string name="dialog_info_message">Fansite version of the app for paring players in MTG drafts.\nThere can be other use-cases for this app, but this is main use case:).\nHelps from Piotr S. and Szymon Sz.</string>
    <string name="settings_dialog_round_time_title">Set round time</string>
    <string name="settings_dialog_round_time_content">Time per round in minutes</string>
    <string name="settings_dialog_round_time_hint">Preferred round time: 50 minutes</string>
    <string name="settings_dialog_round_first_vibration_title">Set first vibration</string>
    <string name="settings_dialog_round_first_vibration_content">Set time before end when first vibration should trigger</string>
    <string name="settings_dialog_round_first_vibration_hint">Preferred 5 minutes</string>
    <string name="settings_dialog_round_second_vibration_title">Set second vibration</string>
    <string name="settings_dialog_round_second_vibration_content">Set time before end when second vibration should trigger.\nIt will be saved only when set less time than in first vibration</string>
    <string name="settings_dialog_round_second_vibration_hint">Preferred 1 minute</string>
    <string name="settings_dialog_round_duration_vibration_title">Set duration of vibration</string>
    <string name="settings_dialog_round_duration_vibration_content">Set how long vibration should last</string>
    <string name="settings_dialog_round_duration_vibration_hint">Preferred: 5 seconds</string>
    <string name="help_title">Help</string>
    <string name="tutorial_info">About this application</string>
    <string name="tutorial_settings">Configure your draft before play </string>
    <string name="tutorial_hour_glass">Press for countdown</string>
    <string name="tutorial_life_app">Open life app for this round</string>
    <string name="header_player_position_name">Player</string>
    <string name="header_player_position_points">Points</string>
    <string name="header_player_position_ogw" translatable="false">OGW%</string>
    <string name="header_player_position_pgw" translatable="false">PGW%</string>
    <string name="header_player_position_omw" translatable="false">OMW%</string>
    <string name="header_player_position_pmw" translatable="false">PMW%</string>
    <string name="text_draw">Draw</string>
    <string name="text_personal_parings">Paring type:  %1$s</string>
    <string name="text_save_results_after_draft">Save Results after draft: %1$s</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="activity_paring_add_paring">Add Paring</string>
    <string name="activity_paring_clear_paring">Clear Parings</string>
    <string name="activity_paring_warning_empty_list">No more players for parings</string>
    <string name="activity_paring_warning_manual_pairing_error">Wrong paring. Reset parings and try one more time</string>
    <string name="activity_paring_warning_paring_not_finished">Please finish all parings for players</string>
    <string name="activity_paring_warning_bye">Last player already has a bye</string>
    <string name="warning_player_name_added">Player with provided name was previously added</string>
    <string name="select_player1">Select 1st player</string>
    <string name="select_player2">Select 2nd player</string>
    <string name="select_player_name">Selected: %1$s</string>
    <string name="select_player_manual_title">Select Player</string>
    <string name="select_player_manual_add">Add</string>
    <string name="spinner_empty_player_list">No more players</string>
    <string name="activity_save_score_board_info_text">Scoreboard name</string>
    <string name="activity_save_score_board_info_small_text">You can watch saved scoreboards using settings</string>
    <string name="activity_save_score_board_save">Save</string>
    <string name="action_save">Save draft</string>
    <string name="action_calculate_mana">Open Mana Calculator</string>
    <string name="action_share">Share scoreboard</string>
    <string name="action_remove_player">Drop player</string>
    <string name="help_save_dashboard">After Game you can choose name this tournament</string>
    <string name="help_drop_player">If there is a need you may drop a player from draft</string>
    <string name="help_share_content">After the game you can share scoreboard</string>
    <string name="warning_save_dashboard">You can chose name for tournament when it will end</string>
    <string name="warning_drop_player">You cannot modify players after draft ended</string>
    <string name="warning_add_player">Players cannot be added in Tournament Mode</string>
    <string name="settings_clean_history">Clean all history</string>
    <string name="settings_save_database" translatable="false">@string/dialog_save_database</string>
    <string name="settings_load_database" translatable="false">@string/dialog_import_database</string>
    <string name="settings_other">Other settings</string>
    <string name="settings_display_scoreboards">Display scoreboards</string>
    <string name="settings_display_players_list">Display players list</string>
    <string name="settings_sittings_option" translatable="false">Sittings: %1$s</string>
    <string name="settings_reset_tour_guide">Reset Tour Guide and display help</string>
    <string name="settings_reset_tour_guide_dialog_title">Do you want to reset help?</string>
    <string name="settings_reset_tour_guide_dialog_content">Help will be reset in this application</string>
    <string name="settings_reset_tour_guide_message">Tour Guide was reseted</string>
    <string name="message_score_boards_removed">All scoreboards were removed</string>
    <string name="message_score_board_not_exists">No scoreboard to display</string>
    <string name="message_player_list_not_exists">No players to display</string>
    <string name="message_score_board_saved">Tournament successful saved</string>
    <string name="action_show_list">Show scoreboards list</string>
    <string name="action_countdown">End of round countdown</string>
    <string name="action_open_life_app">Open Life App</string>
    <string name="message_action_countdown_started">Countdown&#8230;</string>
    <string name="message_action_countdown_cancel">Countdown was cancelled</string>
    <string name="chooser_intent_title_life_counter">Choose life counter application</string>
    <string name="chooser_dialog_title_life_counter">Download LifeCounterApp</string>
    <string name="chooser_dialog_body_life_counter">To handle this action\nplease download application for counting life</string>
    <string name="chooser_intent_title_mana_calculator">Choose mana calculator application</string>
    <string name="chooser_dialog_title_mana_calculator">Download ManaCalculatorApp</string>
    <string name="chooser_dialog_body_mana_calculator">To handle this action\nplease download application for mana calculation</string>
    <string name="chooser_dialog_button_name">Download</string>
    <string name="dummy_player" translatable="false"></string>
    <string name="validation_dialog_title">Validation</string>
    <string name="validation_dialog_body">Please set all game results</string>
    <string name="validation_dialog_button_name" translatable="false">Ok</string>
    <string name="drop_players_item">%1$s points: %2$s</string>
    <string name="drop_player_info_text">To drop players select them and press \'save\'. This action cannot be overriten. Use with caution.</string>
    <string name="settings_rate_me">Please, rate this app</string>
    <string name="settings_check_other_apps">Check my other apps</string>
    <string name="settings_idea_box">Idea box</string>
    <string name="settings_rate_me_error"> Could not open Google Play, please install the market app</string>
    <string name="settings_developer_account_error">Could not open browser, please install one and try this action again </string>
    <string name="settings_idea_box_error">Could not open find e-mail client, please install one and try this action again </string>
    <string name="settings_content_description">Select settings menu</string>
    <string name="settings_counter_off">"To use time counter turn it on in settings "</string>
    <string name="settings_sittings_none">none</string>
    <string name="settings_sittings_random">random</string>
    <string name="settings_sittings_dialog_title">Choose Sittings Options:</string>
    <string name="settings_history_remove_clean_history_dialog_title">Do you want to remove all things?</string>
    <string name="settings_history_remove_clean_history_dialog_body">All historical data will be removed</string>
    <string name="dialog_positive">Ok</string>
    <string name="dialog_negative">Cancel</string>
    <string name="action_switch_algorithm">switch algorithm</string>
    <string name="action_round_history" translatable="false">@string/round_history</string>
</resources>