<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="unii.draft.mtg.parings.ScoreBoardActivity">

    <item
        android:id="@+id/action_remove_player"
        android:icon="@drawable/ic_person_minus"
        android:orderInCategory="101"
        android:title="@string/action_remove_player"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:orderInCategory="102"
        android:title="@string/action_info"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="103"
        android:title="@string/action_share"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="104"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_player"
        android:orderInCategory="105"
        android:title="@string/action_add_player"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_algorithm"
        android:orderInCategory="106"
        android:title="@string/action_switch_algorithm"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_round_history"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:orderInCategory="107"
        android:title="@string/action_round_history"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always" />
</menu>