<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header_playerNameTextView"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/header_player_position_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/header_playerPointTextView"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/header_player_position_points"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/header_playerPMWTextView"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/header_player_position_pmw" />


    <TextView
        android:id="@+id/header_playerOMWTextView"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/header_player_position_omw" />


    <TextView
        android:id="@+id/header_playerPGWTextView"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/header_player_position_pgw" />

    <TextView
        android:id="@+id/header_playerOGWTextView"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/header_player_position_ogw" />


</LinearLayout>