<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/settings_rateApplicationButton"
        style="@style/buttonBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_rate_me" />

    <Button
        android:id="@+id/settings_checkOtherApplicationButton"
        style="@style/buttonBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_check_other_apps" />

    <Button
        android:id="@+id/settings_ideaBoxButton"
        style="@style/buttonBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_idea_box" />

    <Button
        android:id="@+id/settings_resetTourGuideButton"
        style="@style/buttonBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_reset_tour_guide" />
</LinearLayout>