<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/init_mainContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/init_playerNameTextView"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/init_playerNameEditText"
            android:layout_alignParentLeft="true"
            android:text="@string/hint_player_name" />

        <EditText
            android:id="@id/init_playerNameEditText"
            style="@style/editText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/text_view_margin_settings_small"
            android:layout_marginLeft="@dimen/text_view_margin_settings_small"
            android:layout_marginRight="@dimen/text_view_margin_settings_small"
            android:layout_toRightOf="@id/init_playerNameTextView"
            android:inputType="text" />

        <Button
            android:id="@+id/init_addPlayerButton"
            style="@style/buttonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/init_playerNameEditText"
            android:layout_toRightOf="@id/init_playerNameEditText"
            android:text="@string/add_item" />


        <TextView
            android:id="@+id/init_roundsTextView"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/init_roundsEditText"
            android:layout_alignParentLeft="true"
            android:text="@string/hint_rounds" />

        <EditText
            android:id="@id/init_roundsEditText"
            style="@style/editText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/init_playerNameEditText"
            android:layout_marginBottom="@dimen/text_view_margin_settings_small"
            android:layout_marginLeft="@dimen/text_view_margin_settings_small"
            android:layout_marginRight="@dimen/text_view_margin_settings_small"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_toRightOf="@id/init_playerNameTextView"
            android:inputType="number"
            android:maxLength="3" />

        <Button
            android:id="@+id/init_roundsButton"
            style="@style/buttonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/init_roundsEditText"
            android:layout_toRightOf="@id/init_roundsEditText"
            android:text="@string/start_game" />
    </RelativeLayout>

    <ListView
        android:id="@+id/init_playerList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/init_mainContainer"
        android:layout_marginTop="@dimen/standard_margin" />
</RelativeLayout>