<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/init_playerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/init_playerNameTextInput"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/button_padding"
            android:layout_marginTop="@dimen/standard_margin">

            <EditText
                style="@style/editText"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/text_view_margin_settings_small"
                android:layout_marginLeft="@dimen/text_view_margin_settings_small"
                android:layout_marginRight="@dimen/text_view_margin_settings_small"
                android:layout_marginTop="@dimen/standard_margin"
                android:hint="@string/hint_player_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/init_addPlayerButton"
            style="@style/buttonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_toEndOf="@id/init_playerNameTextInput"
            android:layout_toRightOf="@id/init_playerNameTextInput"
            android:text="@string/add_item" />
    </RelativeLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_addPlayerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/init_playerContainer"
        android:layout_above="@+id/save_addPlayerButton"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/save_addPlayerButton"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/text_view_margin_settings_small"
        android:text="@string/activity_save_score_board_save" />
</RelativeLayout>