<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ParingsActivity">

    <view
        android:id="@+id/toolbar"
        style="@style/toolbar"
        class="android.support.v7.widget.Toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="fill_parent" android:layout_below="@id/toolbar"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/paring_counterTextView"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paring_roundTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/text_time" />

        <TextView
            android:id="@+id/paring_roundTextView"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/text_round" />

        <RelativeLayout
            android:id="@+id/paring_buttonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paring_counterTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/standard_margin">

            <Button
                android:id="@+id/paring_startCounterButton"
                style="@style/buttonSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game" />

            <Button
                android:id="@+id/paring_endRoundButon"
                style="@style/buttonSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/paring_startCounterButton"
                android:text="@string/text_end_round" />
        </RelativeLayout>

        <ListView
            android:id="@+id/paring_paringListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paring_buttonContainer"
            android:layout_marginTop="@dimen/standard_margin"/>
    </RelativeLayout>
</RelativeLayout>