<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <view
        android:id="@+id/toolbar"
        style="@style/toolbar"
        class="android.support.v7.widget.Toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/save_score_boardInfoTextView"
            style="@style/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:text="@string/activity_save_score_board_info_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/save_score_boardInfoSmallTextView"
            style="@style/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/save_score_boardInfoTextView"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:text="@string/activity_save_score_board_info_small_text" />

        <EditText
            android:id="@+id/save_score_boardNameEditText"
            style="@style/editText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/save_score_boardInfoSmallTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/text_view_margin_settings_small"
            android:layout_marginLeft="@dimen/text_view_margin_settings_small"
            android:layout_marginRight="@dimen/text_view_margin_settings_small"
            android:layout_marginTop="@dimen/standard_margin" />

        <Button
            android:id="@+id/save_score_board_acceptButton"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/save_score_boardNameEditText"
            android:layout_centerHorizontal="true"
            android:text="@string/activity_save_score_board_save" />
    </RelativeLayout>
</RelativeLayout>